--- a/metric_backend/pom.xml
+++ b/metric_backend/pom.xml
@@ -531,6 +531,19 @@
       <artifactId>google-api-client</artifactId>
       <version>1.28.0</version>
     </dependency>
+    <!-- YAML -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-yaml</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.9.8</version>
+    </dependency>
+
+
   </dependencies>
 
   <repositories>
