Display branch probabilities in plugin

--- a/feedback_plugin/src/main/resources/META-INF/plugin.xml
+++ b/feedback_plugin/src/main/resources/META-INF/plugin.xml
@@ -12,6 +12,7 @@
     </description>
 
     <depends>com.intellij.modules.lang</depends>
+    <depends>Pythonid</depends>
     <depends>Git4Idea</depends>
 
     <project-components>
