--- a/feedback_plugin/build.gradle
+++ b/feedback_plugin/build.gradle
@@ -18,6 +18,9 @@ dependencies {
     
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 
+    testCompile "org.mockito:mockito-core:2.+"
+//    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.2'
+//    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.4.2'
 }
 
 intellij {
