--- a/metric_backend/pom.xml
+++ b/metric_backend/pom.xml
@@ -544,7 +544,12 @@
       <artifactId>jackson-core</artifactId>
       <version>2.9.8</version>
     </dependency>
-
+    <!-- Mocking -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>2.27.0</version>
+    </dependency>
 
   </dependencies>
 
