--- a/metric_backend/pom.xml
+++ b/metric_backend/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>np1815.feedback</groupId>
   <artifactId>metric_backend</artifactId>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
   <name>metric_backend</name>
   <version>0.0.1</version>
 
@@ -22,7 +22,7 @@
     <!-- Taken from auto-generated pom.xml -->
     <swagger-core-version>1.5.18</swagger-core-version>
     <beanvalidation-version>1.1.0.Final</beanvalidation-version>
-    <jetty-version>9.2.9.v20150224</jetty-version>
+    <jetty-version>9.4.18.v20190429</jetty-version>
     <jersey2-version>2.22.4</jersey2-version>
     <jackson-version>2.8.9</jackson-version>
     <junit-version>4.12</junit-version>
