--- a/feedback_plugin/src/main/resources/META-INF/plugin.xml
+++ b/feedback_plugin/src/main/resources/META-INF/plugin.xml
@@ -43,8 +43,8 @@
             <action
                 id="FeedbackDrivenDevelopment.General.DisplayFeedback"
                 class="np1815.feedback.plugin.actions.DisplayFeedbackAction"
-                text="Display feedback"
-                description="Displays feedback"
+                text="Toggle production feedback"
+                description="Toggles the display of production metrics feedback"
                 icon="AllIcons.Actions.QuickfixBulb"
             />
         </group>
