Refactor package structure

--- a/feedback_plugin/src/main/resources/META-INF/plugin.xml
+++ b/feedback_plugin/src/main/resources/META-INF/plugin.xml
@@ -28,7 +28,7 @@
         <projectConfigurable
             id="FeedbackDrivenDevelopment"
             displayName="Feedback Driven Development"
-            instance="np1815.feedback.plugin.components.ProjectConfiguration" />
+            instance="np1815.feedback.plugin.components.FeedbackProjectConfiguration" />
 
         <toolWindow
             id="Production Feedback"
