Install timescaledb, fetch performance history and return from API

--- a/metric_backend/pom.xml
+++ b/metric_backend/pom.xml
@@ -395,6 +395,7 @@
             </target>
             <generate>
               <!-- Generation flags: See advanced configuration properties -->
+              <javaTimeTypes>true</javaTimeTypes>
             </generate>
           </generator>
         </configuration>
