--- a/feedback_plugin/build.gradle
+++ b/feedback_plugin/build.gradle
@@ -14,7 +14,13 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'np1815.feedback', name: 'metric_backend', version: '0.0.1'
+    implementation group: 'np1815.feedback', name: 'metric_backend_client', version: '0.0.1'
+    implementation group: 'org.jfree', name: 'jfreechart', version: '1.5.0'
+
+    // YAML
+    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.8'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.8'
+
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testCompile "org.mockito:mockito-core:2.+"
 }
