Instrument logging calls and save to DB

--- a/metric_backend/pom.xml
+++ b/metric_backend/pom.xml
@@ -176,7 +176,7 @@
               <generateSupportingFiles>true</generateSupportingFiles>
               <generateApiDocumentation>false</generateApiDocumentation>
               <generateModelDocumentation>false</generateModelDocumentation>
-              <skipIfSpecIsUnchanged>true</skipIfSpecIsUnchanged>
+              <skipIfSpecIsUnchanged>false</skipIfSpecIsUnchanged>
 
               <configOptions>
                 <packageName>metric_backend_client</packageName>
